# coredns

./: .dockerignore  .env.example  .gitignore  AUTO_RELOAD_FEATURE.md  CHANGES.md  Corefile.example  Dockerfile  IMPLEMENTATION_SUMMARY.md  OAuth2_README.md  README.md  docker-compose.yml  prompt.md  pyproject.toml  quick_test_oauth2.py  run.sh  test_oauth2.py
app/: config.py  database.py  main.py
app/api/: __init__.py  auth.py  coredns.py  corefile.py  records.py  settings.py
app/models/: __init__.py  backup.py  dns_record.py  log.py  setting.py  zone.py
app/routes/: __init__.py  pages.py
app/schemas/: __init__.py  auth.py  backup.py  coredns.py  corefile.py  dns_record.py  settings.py
app/services/: __init__.py  auth_service.py  backup_service.py  coredns_service.py  corefile_service.py  dns_service.py  settings_service.py
app/static/js/: corefile.js  dashboard.js  records.js
app/templates/: Corefile.j2  base.html  corefile.html  dashboard.html  login.html  records.html
data/: Corefile
data/backups/: Corefile.backup.20251209_030215_877281
docker/: README.md  cert.pem  docker-compose.yml
docs/: BACKUP_GUIDE.md  BACKUP_IMPLEMENTATION.md  CACHE_FIX.md  IMPLEMENTATION_SUMMARY.md  OAuth2_Authentication.md  OAuth2_FIX_422.md  QUICKSTART_OAuth2.md  architecture.md  prd.md  upstream-dns-feature.md  upstream-dns-quickstart.md
docs/stories/: README.md
scripts/: start.sh  test-docker.sh
tests/: test_api_records.py  test_coredns.py  test_corefile.py  test_corefile_upstream_dns.py  test_health.py  test_models.py  test_settings.py
(+12 files in other folders)
